[package]
name = "feature-showcase"
version = "0.1.0"
authors = ["xterm-js-sys contributors"]
edition = "2021"
publish = false

workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
xterm-js-sys = { version = "5.5.0-alpha1" }
wasm-bindgen = "0.2.88"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlTextAreaElement',
  'Node',
  'NodeList',
  'Window',
  'KeyboardEvent',
  'MouseEvent',
  'WheelEvent',
  'Event',
  'EventTarget',
  'HtmlButtonElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
]
