[package]
name = "sparkline"
version = "0.1.0"
authors = ["Rahul Butani <rr.but.a.n.i+crates-io@gmail.com>"]
edition = "2021"
publish = false

workspace = ".."


[dependencies]
xterm-js-sys = { version = "4.6.0-alpha1", features = ["crossterm-support"] }
wasm-bindgen = "0.2.90"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.70"
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
rand = "0.8"


[dependencies.web-sys]
version = "0.3.70"
features = [
  'console',
  'Crypto',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
]


[lib]
crate-type = ["cdylib"]


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# The version of wasm-opt that wasm-pack bundles crashes on current wasm-bindgen
# .wasm files. Current wasm-opt (version 93) crashes on the DWARF info that
# wasm-bindgen produces. So, we'll just disable wasm-opt for now.
wasm-opt = false #["-O4"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
